--- a/MeetingClock/Views/ShellView.xaml
+++ b/MeetingClock/Views/ShellView.xaml
@@ -1,44 +1,124 @@
 ﻿<Window x:Class="MeetingClock.Views.ShellView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"              
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MeetingClock.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="#FF004b8d" Width="Auto" HorizontalAlignment="Stretch">
+            Title="Meeting Clock"
+            Icon="../application_icon.ico"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"              
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+            xmlns:local="clr-namespace:MeetingClock.Views"
+            mc:Ignorable="d" 
+            d:DesignHeight="300" d:DesignWidth="300"
+            Width="500"
+            Height="300">
+    <Window.Resources>
+        <Style x:Key="BigText" TargetType="TextBox">
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="FontFamily" Value="Courier New" />
+            <Setter Property="FontSize" Value="24" />
+        </Style>
+        <Style x:Key="BigTextBlock" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Courier New" />
+            <Setter Property="FontSize" Value="24" />
+        </Style>
+    </Window.Resources>
+    <Grid Background="CornflowerBlue" Width="Auto" HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="38" />
         </Grid.RowDefinitions>
         <StackPanel Margin="5" Background="White">
-            <Label Content="Average Billing Rate"/>
-            <TextBox Text="{Binding BillingRate}"/>
+            <Label Content="Average Hourly Rate"/>
+            <TextBox Text="{Binding BillingRate, Converter={StaticResource DoubleToCurrencyConverter}, UpdateSourceTrigger=PropertyChanged}" 
+                     Style="{StaticResource BigText}"/>
             <Label Content="Number of Participants"/>
-            <TextBox Text="{Binding Participants}"/>
+            <TextBox Text="{Binding Participants, UpdateSourceTrigger=PropertyChanged}"
+                     Style="{StaticResource BigText}"/>
             <Label Content="Alert Interval" />
-            <TextBox Text="{Binding AlertInterval}"/>
-            <Button Content="Start Meeting" Command="{Binding StartMeetingCommand}"/>
+            <TextBox Text="{Binding AlertInterval, Converter={StaticResource IntToCurrencyConverter}, UpdateSourceTrigger=PropertyChanged}"
+                     Style="{StaticResource BigText}"/>
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="Stop" Command="{Binding StopMeetingCommand}" 
+                        FontSize="24" 
+                        BorderBrush="Transparent"
+                        BorderThickness="0">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border x:Name="Border" 
+                                                  BorderThickness="{TemplateBinding BorderThickness}"
+                                                  Background="{TemplateBinding Background}"
+                                                  BorderBrush="{TemplateBinding BorderBrush}">
+                                            <ContentPresenter Margin="2"
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                RecognizesAccessKey="True"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="LightGray"/>
+                                </Trigger>
+                                <DataTrigger Binding="{Binding IsRunning}" Value="False">
+                                    <Setter Property="Background" Value="CornflowerBlue"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                <Button Grid.Column="1" Content="Run" Command="{Binding StartMeetingCommand}" 
+                        FontSize="24" 
+                        BorderBrush="Transparent"
+                        BorderThickness="0">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border x:Name="Border" 
+                                                  BorderThickness="{TemplateBinding BorderThickness}"
+                                                  Background="{TemplateBinding Background}"
+                                                  BorderBrush="{TemplateBinding BorderBrush}">
+                                            <ContentPresenter Margin="2"
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                RecognizesAccessKey="True"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="LightGray"/>
+                                </Trigger>
+                                <DataTrigger Binding="{Binding IsRunning}" Value="True">
+                                    <Setter Property="Background" Value="CornflowerBlue"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </Grid>
         </StackPanel>
-        <!--
-        <StackPanel x:Name="PriorityPanel" Grid.Column="1" Margin="5" Background="White">
-            <Button Content="Add Priority" Command="{Binding AddPriorityCommand}"/>
-            <ListBox ItemsSource="{Binding Priorities}" Height="{Binding ElementName=PriorityPanel, Path=ActualHeight}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <Label Content="{Binding Item1}" />
-                            <TextBox AcceptsReturn="True" Height="80" Text="{Binding Item2}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
-            -->
-        <TextBlock Grid.Row="1" Foreground="Black" Grid.ColumnSpan="2" Text="{Binding MeetingCost}" Background="White" Margin="5"/>
+        <Grid Grid.Column="1" Background="White" Margin="5" >
+            <TextBlock Foreground="Black"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Margin="5" 
+                       Text="{Binding MeetingCost, Converter={StaticResource DoubleToCurrencyConverter}}"                    
+                       Style="{StaticResource BigTextBlock}"/>
+        </Grid>
     </Grid>
 </Window>
